add a setup method to configure metaj application wide settings

--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,10 @@
 		</dependency>
 		<dependency>
 			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>cloudwatchlogs</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
 			<artifactId>quicksight</artifactId>
 		</dependency>
 		<dependency>
