--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>4.8.0</version>
+		</dependency>
+
         <!-- AWS dependencies -->
 		<dependency>
 			<groupId>software.amazon.awssdk</groupId>
