--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,22 @@
 			<artifactId>mockito-core</artifactId>
 			<version>4.8.0</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.11.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.14.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.24</version>
+			<scope>provided</scope>
+		</dependency>
 
         <!-- AWS dependencies -->
 		<dependency>
@@ -76,6 +92,12 @@
 	</dependencies>
 
 	<build>
+		<testResources>
+			<testResource>
+				<!-- points mvn to test resources; don't remove -->
+				<directory>${basedir}/src/test/java/resources</directory>
+			</testResource>
+		</testResources>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
