--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
 			<version>1.18.24</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.findify</groupId>
+			<artifactId>s3mock_2.13</artifactId>
+			<version>0.2.6</version>
+			<scope>test</scope>
+		</dependency>
 
         <!-- AWS dependencies -->
 		<dependency>
